Diseño base listo

--- a/plataformaGestionPredial/src/app/app.component.html
+++ b/plataformaGestionPredial/src/app/app.component.html
@@ -3,7 +3,7 @@
     <!-- <div style="" class="row"> -->
         <div id="sidebar" class="col-2">
             <div id="brand" class="row">
-                <img src="./farm.svg" alt="">
+                <img src="../assets/predio.svg" alt="predio" >
             </div>
             <div id="menu">
                 <app-sidebar></app-sidebar>
