--- a/plataformaGestionPredial/src/app/app.component.css
+++ b/plataformaGestionPredial/src/app/app.component.css
@@ -1,28 +1,36 @@
 #brand{
-    height: 20%;
-    /* background-color: brown; */
-    /* background-image: url('./farm.svg'); */
+    min-height: 20%;
+    /* max-height: 20%; */
+    background-color: rgb(204, 225, 14);
     background-repeat: no-repeat;
+    /* display: block; */
 }
 #menu{
     height:80%;
+    /* max-height: 80%; */
     color: wheat;
+    /* display: block; */
 }
 #brand img{
     min-width: 100%;
     max-height: 100%;
-    padding: 5%;
+    /* padding: 5%; */
 }
 /* #main{
     height: 20%;
 } */
 #header{
-    height: 20%;
+    min-height: 20%;
+    /* max-height: 20%; */
     width: 100%;
+    /* display: block; */
 }
 #content{
-
+    min-height: 80vh;
+    /* max-height: 80vh;
+    display: block; */
 }
 #main{
-    padding: 0% !important;
+    /* debido a que la clase col-6 posee un margen por defecto */
+    padding-left: 0% !important;
 }
