--- a/plataformaGestionPredial/src/app/navbar/navbar.component.css
+++ b/plataformaGestionPredial/src/app/navbar/navbar.component.css
@@ -1,8 +1,10 @@
 #title{
     text-align: center;
+    min-height: 80%;
 }
 #breadcrumb{
-    vertical-align: bottom;
+    /* vertical-align: bottom; */
     margin-left: 1%;
-    margin-top: 5%;
+    /* padding-top: 5%; */
+    min-height: 20%;
 }
