--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,21 @@
 <div class="row" >
     <div class="col-6">
-        <a class="nav-link" routerLink="/dashboard">Listado</a>
+        <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+    </div>
+    <div class="col-6">
+        <i class="bi bi-graph-up-arrow"></i>
+    </div>
+    <div class="col-6">
+        <a class="nav-link" routerLink="/listado">Listado</a>
     </div>
     <div class="col-6">
         <i class="bi bi-list"></i>
     </div>
-    <div class="col-6">Registrar</div>
-    <div class="col-6"><i class="bi bi-pencil"></i></div>
+    <div class="col-6">
+        <a class="nav-link" routerLink="/registrar">Registrar</a>
+    </div>
+    <div class="col-6">
+        <i class="bi bi-pencil"></i>
+    </div>
     
 </div>
