Correccion en diseño y adicion de nuevos menus

--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.css
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.css
@@ -5,9 +5,10 @@ ul{
     list-style: none;
     cursor: pointer;
 }
-/* i{
-    margin-left: 10%;
-} */
+i{
+    /* margin-left: 10%; */
+    float:right;
+}
 .col-6{
     /* align-content: center;
     display: flex;
@@ -17,6 +18,10 @@ ul{
     padding-left: 20%;
     padding-top: 10%;
     width: 50%;
-    margin:auto;
+    /* margin:auto; */
     /* margin-left: 1%; */
+}
+.menu{
+    height: 50px;
+    cursor: pointer;
 }
