--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -1,1 +1,26 @@
-<p>list works!</p>
+<p>Component list</p>
+<!-- <div *ngIf="registers.length>0; else elseBlock">
+    <table cTable>
+      <thead cTableColor="dark">
+      <tr>
+      <th scope="col">#</th>
+      <th scope="col">Fecha</th>
+      <th scope="col">Condición</th>
+      <th scope="col">Cantidad aproximada (ml)</th>
+      <th scope="col">Acciones</th>
+      </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let register of registers; index  as i ">
+          <td>{{i+1}}</td>
+          <td>{{register.fecha}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <ng-template #elseBlock>
+          Loading... 
+  </ng-template> -->
+  
+  
+  
