En funcionamiento guardar registros y documentos

--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -68,6 +68,16 @@
     </div>
 </div>
 
+<!-- SUMINISTROS -->
+<div class="row menu" routerLink="/list">
+    <div class="col-3">
+        <fa-icon [icon]="faToolbox" style="float: right;"></fa-icon>
+    </div>
+    <div class="col-9">
+        <!-- <a class="nav-link" >Identificadores<i class="bi bi-caret-right"></i></a> -->
+        <a class="nav-link" >Suministros</a>
+    </div>
+</div>
 
 <!-- TEST -->
 <!-- <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
