--- a/plataformaGestionPredial/src/app/app.component.css
+++ b/plataformaGestionPredial/src/app/app.component.css
@@ -9,7 +9,7 @@
     /* display: block; */
 }
 #menu{
-    height:80%;
+    height:80vh;
     /* max-height: 80%; */
     color: wheat;
     /* display: block; */
@@ -23,7 +23,7 @@
     height: 20%;
 } */
 #header{
-    min-height: 20%;
+    min-height: 20vh;
     /* max-height: 20%; */
     width: 100%;
     /* display: block; */
