--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -13,7 +13,7 @@
                 <h3>Ingresar documento</h3>
             </div>
             <div class="card-body">
-                <form #f="ngForm">
+                <form id="form" #f="ngForm" method="POST" >
                     <div class="form-group mb-2">
                         <label for="name">Nombre</label>
                         <input type="text" class="form-control" id="name" name="name" ngModel #name="ngModel" required>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="form-group mb-4">
                         <label for="file">Seleccione archivo</label>
-                        <input type="file" class="form-control" id="file" name="file">
+                        <input type="file" class="form-control" id="file" name="file" (change)="handleFileInput($event)">
                     </div>
                     <div class="form-group">
                         <button type="submit" (click)="registerDocument()" class="btn btn-primary">Ingresar</button>
