--- a/plataformaGestionPredial/src/app/navbar/navbar.component.css
+++ b/plataformaGestionPredial/src/app/navbar/navbar.component.css
@@ -4,8 +4,9 @@
 }
 #breadcrumb{
     /* vertical-align: bottom; */
-    margin-top: 5%;
+    padding-top: 5%;
     margin-left: 1%;
     /* padding-top: 5%; */
     min-height: 20%;
+    max-height: 20%;
 } 
