--- a/plataformaGestionPredial/src/styles.css
+++ b/plataformaGestionPredial/src/styles.css
@@ -17,3 +17,5 @@ body{
     /* position:absolute; */
     height: 100vh;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
