--- a/plataformaGestionPredial/src/app/login/login.component.html
+++ b/plataformaGestionPredial/src/app/login/login.component.html
@@ -6,17 +6,18 @@
                     <img src="../assets/predio.svg" width="100" height="100" alt="predio" routerLink="/dashboard" >
             </div>
             <div class="card-body">
-                <form id="form"  method="POST" >
+                <form id="form" method="post" >
                     <div class="form-group mb-2">
-                        <label for="username">Usuario</label>
+                        <label for="username">Email</label>
                         <input type="email" class="form-control" id="username" name="username" required placeholder="ej: usuario@correo.com">
                     </div>
                     <div class="form-group mb-2">
                         <label for="password">Contraseña</label>
                         <input type="password" class="form-control" id="password" name="password" required placeholder="ej: 123456">
+                        <span class="small">Entre 5 a 10 carácteres alfanuméricos</span>
                     </div>
                     <div class="form-group" style="text-align: center">
-                        <button type="submit" class="btn btn-primary" (click)="login();">Ingresar</button>
+                        <button class="btn btn-primary" (click)="login($event);">Ingresar</button>
                         <br><br>
                         <span>¿No tiene cuenta?  </span>
                         <a href="" routerLink="/register">Cree su cuenta aquí</a>
