--- a/plataformaGestionPredial/src/app/main/main.component.css
+++ b/plataformaGestionPredial/src/app/main/main.component.css
@@ -2,7 +2,7 @@
     min-height: 20%;
     /* max-height: 20%; */
     /* background-color: rgb(204, 225, 14); */
-    background-color: rgb(73, 70, 171);
+    background-color: rgb(31, 139, 78);
     background-repeat: no-repeat;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -18,16 +18,23 @@
     min-width: 100%;
     max-height: 100%;
     cursor: pointer;
-    /* padding: 5%; */
+    padding-left: 8%;
 }
 /* #main{
     height: 20%;
 } */
 #header{
+    background-image: url("../../assets/fondoHeader.jpg");
+    background-size: cover;
+  /* background-position: center;
+  background-repeat: no-repeat; */
     min-height: 20vh;
     /* max-height: 20%; */
     width: 100%;
     /* display: block; */
+    /* color: gold;
+    text-shadow: black 2px;
+    font-size: larger; */
 }
 #content{
     min-height: 80vh;
