--- a/plataformaGestionPredial/src/app/login/login.component.html
+++ b/plataformaGestionPredial/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div id="main">
 <div class="container" style="width:30rem; padding-top: 7rem; " id="formLogin">
     <div class="container" >
         <div class="card">
@@ -26,4 +27,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
