--- a/plataformaGestionPredial/src/app/login/login.component.css
+++ b/plataformaGestionPredial/src/app/login/login.component.css
@@ -1,3 +1,11 @@
 a{
     text-decoration: dashed;
 }
+/* #formLogin{
+    background-image: ;
+} */
+#main{
+    background: url("../../assets/fondoHeader.jpg") no-repeat center center fixed;
+    background-size: cover;
+    /*opacity: 0.5;*/
+  }
